Added notification panel and pop ups when the customers' order status is changed by the admin, and added pop ups in the bottom-left when they add items to their cart but might removed because the cart button will be moved there. Also add persistence on tabs, when they reload the page, it will stay on that tab like in Customers' cart tabs and also in Admin Dashboard tabs. Made significant UI improvements both in Customer and Admin side. Specifically improved customer's Order History and Custom Cakes, while improved Orders and Inquiries tab in Admin Dashboard. Made the Order and Inquiry ID shorter.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
       body {
         font-family: 'Poppins', sans-serif;
       }
+      /* Hide Edge/IE native password reveal button to avoid doubling with our custom toggle */
+      input[type="password"]::-ms-reveal,
+      input[type="password"]::-ms-clear {
+        display: none;
+      }
     </style>
   <script type="importmap">
 {
